--- a/src/app/company-settings/company-integration/company-integration.component.sass
+++ b/src/app/company-settings/company-integration/company-integration.component.sass
@@ -12,6 +12,8 @@
       line-height: 22px
       letter-spacing: 0.01em
       color: #323C47
+    .integration__connected-box
+      margin-top: 6px
 
   .integration__new-connect
     display: flex
@@ -30,3 +32,4 @@
 img
   width: 30px
   height: 30px
+  margin: 5px
