--- a/src/app/company-settings/company-properties/company-properties.component.sass
+++ b/src/app/company-settings/company-properties/company-properties.component.sass
@@ -49,7 +49,8 @@
   margin-top: 10px
 
 .company-width
-  width: 170px
+  // width: 170px
+  width: max-content
 
 .workload-width
   width: 50px
@@ -81,4 +82,5 @@
 
 .mat-checkbox-layout .mat-checkbox-label, .mat-checkbox
   line-height: 24px
+
 
