--- a/src/app/employees/employee-information/employee-information.component.sass
+++ b/src/app/employees/employee-information/employee-information.component.sass
@@ -84,23 +84,30 @@ td.mat-cell, td.mat-footer-cell, th.mat-header-cell
 td
   padding: 0
 
-.mat-menu-item
-  height: auto
-  width: auto
-  line-height: 2px
-  font-size: 12px
 
+.information_about
+  display: flex
+  flex-direction: column
+  justify-content: space-around
+  width: 300px
+  height: 320px
+  overflow: auto
   .information_about_role
     .role-name
+      font-family: Poppins
       font-weight: 600
       font-size: 12px
       line-height: 18px
+      margin: 0 5px
+
     .role-description
-      width: 50%
+      font-family: Poppins
+      width: auto
       font-weight: normal
       font-size: 12px
       line-height: 18px
       text-align: justify
+      margin: 0 5px
 
 .mat-form-field
   font-size: 12px
