--- a/src/styles.sass
+++ b/src/styles.sass
@@ -29,3 +29,7 @@
 .mat-button-toggle-label-content
   line-height: 14px !important
 
+.mat-menu-panel
+  min-width: 300px !important
+  max-width: 350px !important
+  overflow: auto !important
