--- a/src/app/company-settings/comments/comments.component.html
+++ b/src/app/company-settings/comments/comments.component.html
@@ -1,5 +1,6 @@
 <div class="comments">
-  <mat-slide-toggle>Comments to each task are required</mat-slide-toggle>
+  <mat-slide-toggle [(checked)]="company.commentRequire" (change)='changeComment()'>Comments to each task are required
+  </mat-slide-toggle>
   <p class="comments__text">Custom comments validation:</p>
   <mat-form-field class="comments__input">
     <input matInput value="w+" />
