--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -3,7 +3,7 @@
 
     <!-- <a href="#"><i class="material-icons">help_outline</i></a> -->
     <a href="#"><i class="material-icons">notifications</i></a>
-    <a routerLink="/login"><i class="material-icons">input</i></a>
+    <a (click)='rebootData()'><i class="material-icons">input</i></a>
 
   </div>
 </mat-toolbar>
