--- a/src/app/profile-page/notification-preferences/notification-preferences.component.html
+++ b/src/app/profile-page/notification-preferences/notification-preferences.component.html
@@ -1,32 +1,20 @@
 <div class="notification-preferences">
   <div class="notification-preferences__header">
     <h3 class="notification-preferences__text">Notification Preferences:</h3>
-    <button
-      mat-raised-button
-      (click)="onSave($event)"
-      class="save-button"
-      color="primary"
-      type="submit"
-      [disabled]="buttonDisabled"
-    >
+    <button mat-raised-button (click)="onSave($event)" class="save-button" color="primary" type="submit"
+      [disabled]="buttonDisabled">
       Save
     </button>
   </div>
 
-  <div
-    class="notification-preferences__content content-flex"
-    *ngFor="let option of user.notificationPreference.notificationOptions"
-  >
+  <div class="notification-preferences__content content-flex"
+    *ngFor="let option of user.notificationPreference.notificationOptions">
     <mat-checkbox [(ngModel)]="option.checked">{{ option.label }}</mat-checkbox>
 
     <mat-form-field>
-      <mat-label>Toppings</mat-label>
-      <mat-select [formControl]="toppings" multiple>
-        <mat-option
-          *ngFor="let topping of user.notificationSender"
-          [value]="topping"
-          >{{ topping }}</mat-option
-        >
+      <mat-select [formControl]="items" multiple [(ngModel)]="option.sendTo" [disabled]='!option.checked'>
+        <mat-option *ngFor="let item of user.notificationPreference.notificationSender" [(value)]="item">{{ item }}
+        </mat-option>
       </mat-select>
     </mat-form-field>
   </div>
