--- a/src/app/timelogs/timelog-day/timelog-day.component.html
+++ b/src/app/timelogs/timelog-day/timelog-day.component.html
@@ -7,13 +7,7 @@
           <ng-container matColumnDef="project">
             <th mat-header-cell *matHeaderCellDef> Project </th>
             <td mat-cell *matCellDef="let timesheet; let i = index" [formGroup]="timesheet">
-              <mat-form-field floatLabel="never">
-                <mat-select placeholder="Choose Project" formControlName="project">
-                  <mat-option *ngFor="let project of projects" [value]="project">
-                   {{ project }}
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
+              <app-timelog-select [projects]="projects" formControlName="project"></app-timelog-select>
             </td>
             <td mat-footer-cell *matFooterCellDef> Total </td>
           </ng-container>
